fix: preserve whitespace for text in nav button

--- a/app/components/buttons/NavButton.module.css
+++ b/app/components/buttons/NavButton.module.css
@@ -11,7 +11,7 @@
     height: 60px;
     display: flex;
     align-items: center;
-    white-space: nowrap;
+    white-space: pre;
 }
 
 .NavButtonCircle {
